# better_ctypes

./: LICENSE  README.md  pyproject.toml
better_ctypes/: __init__.py  decorator.py
tests/: test_decorator.py
